@@ -7,7 +7,7 @@ use Importer 'NewsExtractor::TextUtil' => qw(parse_dateline_ymdhms);
 
 sub dateline {
     my ($self) = @_;
-    return parse_dateline_ymdhms( $self->dom->at('td.newsbox_content_txt'), '+08:00' );
+    return parse_dateline_ymdhms( $self->dom->at('td.newsbox_content_txt')->all_text(), '+08:00' );
 }
 
 sub journalist {
@@ -16,6 +16,9 @@ sub journalist {
     my ($x) = $txt =~ m{\A(\S+)／\S+報導\n};
     unless ($x) {
         ($x) = $txt =~ m{\A\S*(文／\S+\s+圖／\S+)\n};
+    }
+    unless ($x) {
+        ($x) = $txt =~ m/ \A\S*(\S{3})\n /x;
     }
     return $x;
 }
