@@ -1,3 +1,5 @@
+  - Improve the recall of dateline and journalist on www.mdnkids.com
+
 v0.34.0 2020-07-26T22:57:38+0800
   - Add a site-specific extractor for www.nownews.com
   - Add a site-specific extractor for www.mdnkids.com
